# openchatGPT_prompts

./: .gitignore  0_get_tweets.py  1_download_img.py  2_filter_img.py  3_read_img.py  4_final_filter.py  README.md  conversations_backup.json  downloaded_tweets.csv  pyproject.toml
